--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
   "repository": "#",
-  "license": "UNLICENSED",
-  "scripts":
-  {
+  "license": "LICENSED",
+  "scripts": {
     "dev": "vite serve --host",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies":
-  {
+  "dependencies": {
+    "@react-three/fiber": "^8.15.12",
+    "@theatre/core": "^0.5.1",
+    "@theatre/r3f": "^0.5.1",
+    "@theatre/studio": "^0.5.1",
     "lil-gui": "^0.16.1",
+    "react": "^18.2.0",
     "stats.js": "^0.17.0",
     "stylus": "^0.58.1",
     "three": "^0.141.0",
     "vite": "^2.9.12",
     "vite-plugin-glsl": "^0.1.2"
+  },
+  "devDependencies": {
+    "@types/three": "^0.159.0"
   }
 }
